<resources>
    <string name="app_name">SimpleCalculator</string>
    <string name="numbers_value">0</string>
    <string name="first_number_hint">Put your first number here</string>
    <string name="first_number">First Number: </string>
    <string name="second_number_hint">Put your second number here</string>
    <string name="second_number">Second Number: </string>
    <string name="operator_plus">+</string>
    <string name="operator_minus">-</string>
    <string name="operator_div">/</string>
    <string name="operator_multi">*</string>
    <string name="str_result">Result</string>
    <string name="str_enter_first_number">Please Enter First Number</string>
    <string name="str_enter_second_number">Please Enter Second Number</string>
</resources>